moddified ToDos list

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 	<input type="text" placeholder="Add New Todo">
 
 	<ul>
-		<li><span><i class="fa fa-trash"></i></span> Go To Potions Class</li>
-		<li><span><i class="fa fa-trash"></i></span> Buy New Robes</li>
-		<li><span><i class="fa fa-trash"></i></span> Visit Hagrid</li>
+		<li><span><i class="fa fa-trash"></i></span> Tabel de primitive</li>
+		<li><span><i class="fa fa-trash"></i></span> Teorema de integrare prin parti</li>
+        <li><span><i class="fa fa-trash"></i></span> Tabel de primitive la luneta</li>
+        <li><span><i class="fa fa-trash"></i></span> Prima teorema de schimbare de variabile</li>		
 	</ul>
 </div>
 
